Blog post are loading designated pages

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
     <header class="header">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../home.ejs">
+          <a class="navbar-brand" href="/">
             <img
               src="/images/bloggerboxlogo.png"
               alt="logo"
@@ -40,13 +40,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto text-center mb-2 mb-lg-0">
               <li class="nav-item px-3">
-                <a class="nav-link active" aria-current="page" href="../home.ejs">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item px-3">
-                <a class="nav-link" href="../about.ejs">About</a>
+                <a class="nav-link" href="/about">About</a>
               </li>
               <li class="nav-item px-3">
-                <a class="nav-link" href="../contact.ejs">Contact</a>
+                <a class="nav-link" href="/contact">Contact</a>
               </li>
               
                 </ul>
