--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,12 @@
-<%- include("partials/header.ejs"); %>
+<%- include("partials/header.ejs"); -%>
 
 <h1>Home</h1>
-<p><%= content %></p>
+<p><%=content%></p>
 
-<%- include('partials/footer.ejs'); %>
+<%posts.forEach((post) => {%>
+<h1><%=post.title%></h1>
+<p>
+  <%=post.content.substring(0, 100) + "..."%>
+  <a href="/posts/<%=post.title%>"> Read More</a>
+</p>
+<%})%> <%- include('partials/footer.ejs'); -%>
