--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,14 +1,138 @@
 * {
   margin: 0;
   padding: 0;
+  border: none;
   box-sizing: border-box;
   font-family: 'Rubik Broken Fax', sans-serif;
 }
 
 body {
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
+  overflow: auto;
+  /* height: 100vh; */
+  /* overflow-x: scroll; */
   background-color: #f9fcff;
   background-image: linear-gradient(147deg, #f9fcff 0%, #dee4ea 74%);
+  background-attachment: fixed;
+}
+
+h1 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  color: #444;
+}
+
+h2 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+  color: #555;
+}
+
+p,
+input,
+textarea {
+  margin-bottom: 20px;
+}
+
+small {
+  display: block;
+  margin-bottom: 20px;
+  color: #888;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 1em;
+  outline: none;
+  transition: border 0.3s;
+}
+
+.container {
+  max-width: 800px;
+  margin: 50px auto 20px auto;
+  background-color: #f8f9fa;
+  padding: 20px 40px;
+  border-radius: 8px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
+
+.container > h1,
+p {
+  text-align: center;
+}
+
+.post-container {
+  max-width: 800px;
+  margin: 20px auto;
+  background-color: #f8f9fa;
+  padding: 20px 40px;
+  border-radius: 8px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.btn {
+  margin: 10px 0px;
+}
+
+.btn:active {
+  transform: scale(0.97);
+}
+.createBtn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#header {
+  border-bottom: solid black;
+}
+
+#footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 2rem;
+  background-color: #f8f9fa;
+  padding-top: 5px;
+  border-top: solid black;
+}
+
+#createPostBtn {
+  margin: 20px 0;
+  background-color: #2ecc71;
+  padding: 10px 15px;
+  font-size: 1em;
+  border-radius: 4px;
+  cursor: pointer;
+  /* transition: background-color 0.3s; */
+  border: none;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+}
+
+#createPostBtn:hover {
+  background-color: #18a854;
+}
+
+#createPostBtn:active {
+  transform: scale(0.97);
+}
+
+.content {
+  text-align: left;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
