--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,8 @@
 <%- include("partials/header.ejs"); %>
 
-<h1>Contact</h1>
-<p><%= contactContent %></p>
+<div class="container">
+  <h1>Contact</h1>
+  <p><%= contactContent %></p>
+</div>
 
 <%- include('partials/footer.ejs'); %>
