--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,19 +1,21 @@
 <%- include("partials/header.ejs"); %>
-
-<h1>Create A Post</h1>
-<form class="" action="/create" method="post">
-  <div class="form-group">
-    <label>Title</label>
-    <input class="form-control" type="text" name="postTitle" />
-    <label>Post</label>
-    <textarea
-      class="form-control"
-      name="postBody"
-      rows="3"
-      cols="30"
-    ></textarea>
-  </div>
-  <button class="btn btn-dark" type="submit" name="submit">Submit</button>
-</form>
-
+<div class="container">
+  <h1>Create A Post</h1>
+  <form class="createPostForm" action="/create" method="post">
+    <div class="form-group">
+      <label>Title</label>
+      <input class="form-control" type="text" name="postTitle" />
+      <label>Post</label>
+      <textarea
+        class="form-control"
+        name="postBody"
+        rows="3"
+        cols="30"
+      ></textarea>
+      <label>Author</label>
+      <input class="form-control" type="text" name="postAuthor" />
+    </div>
+    <button class="btn btn-dark" type="submit" name="submit">Submit</button>
+  </form>
+</div>
 <%- include('partials/footer.ejs'); %>
