--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,12 +1,32 @@
 <%- include("partials/header.ejs"); %>
 
-<h1><%= title %></h1>
-<p><%= content %></p>
-<button formaction="/edit" class="btn btn-primary" type="submit" name="submit">
-  Edit
-</button>
-<button formaction="/delete" class="btn btn-danger" type="submit" name="submit">
-  Delete
-</button>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <title>Blog Post</title>
+  </head>
+
+  <body>
+    <div class="container">
+      <h1 class="title"><%= title %></h1>
+      <small>By: <%= author %></small>
+      <small><%= date %></small>
+      <p class="content"><%= content %></p>
+      <div class="buttons">
+        <a class="btn btn-primary" href="/edit/<%= id %>">Edit</a>
+        <a class="btn btn-danger" href="/delete/<%= id %>">Delete</a>
+      </div>
+    </div>
+  </body>
+</html>
 
 <%- include('partials/footer.ejs'); %>
