Finished blog post

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -45,6 +45,7 @@
             type="text"
             name="title"
             placeholder="Title"
+            required
           />
           <label>Post</label>
           <textarea
@@ -55,6 +56,7 @@
             cols="30"
             placeholder="Content"
             style="resize: none"
+            required
           ></textarea>
         </div>
         <button class="btn btn-dark" type="submit" name="submit">
