--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -26,6 +26,16 @@ h2 {
   color: #555;
 }
 
+li {
+  list-style: none;
+  text-align: center;
+}
+
+a {
+  text-decoration: underline;
+  color: rgb(99, 99, 99);
+}
+
 p,
 input,
 textarea {
@@ -74,11 +84,6 @@ p {
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
-}
-
-a {
-  text-decoration: none;
-  color: rgb(0, 0, 0);
 }
 
 .btn {
